--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "heroku-build": "npm install --production"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/z888e/BDD_grB.git"
+  },
+  "engines": {
+    "node": "19.0.1",
+    "npm": "8.19.2"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +29,8 @@
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.3"
   }
 }
